Fixed minor design mistakes spotted on Firefox

--- a/components/SwitchDemo/SwitchDemo.module.scss
+++ b/components/SwitchDemo/SwitchDemo.module.scss
@@ -8,6 +8,7 @@
   width: max-content;
 
   input {
+    position: absolute;
     opacity: 0;
     width: 0;
     height: 0;
